// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gap[Base] should render correctly  1`] = `
<div
  class="cx0e344 soui-gap-wrapper"
  style="margin-bottom: -8px; margin-right: -8px; width: 400px;"
>
  <div
    class="ctt2ole soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-vk6maf soui-button-primary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ctt2ole soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-vk6maf soui-button-primary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ctt2ole soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-vk6maf soui-button-primary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ctt2ole soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-vk6maf soui-button-primary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ctt2ole soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-vk6maf soui-button-primary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ctt2ole soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-vk6maf soui-button-primary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ctt2ole soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-vk6maf soui-button-primary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ctt2ole soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-vk6maf soui-button-primary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ctt2ole soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-vk6maf soui-button-primary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ctt2ole soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-vk6maf soui-button-primary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about align 1`] = `
<div
  class="c8yl1wr soui-radio-group"
>
  <div
    class="c-x0iku9 soui-radio-wrapper c-yin908 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      flex-start
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      center
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      flex-end
    </span>
  </div>
  <div
    class="c-x0iku9 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cmm97dk soui-radio-indicator-wrapper"
    >
      <span
        class="cclk2uz soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="ckwqdut soui-radio-desc"
    >
      baseline
    </span>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about custom 1`] = `
<div
  style="display: flex; align-items: center; margin-bottom: 16px;"
>
  <div
    style="width: 80px;"
  >
    column:
  </div>
  <div
    class="cl6tt9n soui-slider-wrapper"
    style="flex: 1;"
  >
    <div
      class="c9aeyw3 soui-slider-track"
    >
      <div
        class="c-vzh05p soui-slider-track-inner"
        dir="ltr"
        style="left: 0%; right: 92%;"
      >
        <div
          class="c-y1bl7d soui-slider-indicator c-lqbj4c soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="c9cb9mm soui-slider-end-value c9b7xvt soui-slider-value"
          dir="ltr"
        >
          8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about vertical 1`] = `
<div
  class="cx0e344 soui-gap-wrapper"
  style="margin-bottom: -10px; margin-right: -8px; width: 400px; flex-direction: column;"
>
  <div
    class="ctt2ole soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c-vk6maf soui-button-primary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ctt2ole soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c-vk6maf soui-button-primary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ctt2ole soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c-vk6maf soui-button-primary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ctt2ole soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c-vk6maf soui-button-primary cd0yd2j soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;
